| Bug #33715 | CommitAckMarker map is not correctly initialized during TC-to | ||
|---|---|---|---|
| Submitted: | 6 Jan 2008 19:08 | Modified: | 25 Apr 2008 10:24 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | telco-6.3..+ | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
| Triage: | D4 (Minor) / R2 (Low) / E4 (High) | ||
[6 Jan 2008 19:08]
Jonas Oreland
[6 Jan 2008 19:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/40608 ChangeSet@1.2825, 2008-01-06 19:12:24+01:00, jonas@perch.ndb.mysql.com +4 -0 ndb - bug#33715 init commitackmarker bitmask during LQH_TRANSCONF (tc-takeover) also change so that TC_COMMIT_ACK is sent JBB
[6 Jan 2008 19:16]
Jonas Oreland
pushed to telco-63 telco-64 and 51-telco
[1 Feb 2008 15:25]
Jon Stephens
Documented in 5.1.23-ndb-6.3.8 changelog as follows:
A failure to initialize an internal variable led to sporadic
crashes during cluster testing.
Left bug in PQ status pending further merges.
[25 Apr 2008 10:24]
Jonas Oreland
no further merges, closing
